trunk/Archive2/fc/d37467ac859c28/output
main.cpp: In function 'main':
main.cpp:6:21: error: storage size of 'ts' isn't known
     struct timespec ts;
                     ^
main.cpp:7:5: error: implicit declaration of function 'timespec_get' [-Wimplicit-function-declaration]
     timespec_get(&ts, TIME_UTC);
     ^
main.cpp:7:23: error: 'TIME_UTC' undeclared (first use in this function)
     timespec_get(&ts, TIME_UTC);
                       ^
main.cpp:7:23: note: each undeclared identifier is reported only once for each function it appears in
main.cpp:6:21: warning: unused variable 'ts' [-Wunused-variable]
     struct timespec ts;
                     ^
